src/mscompress.h

#define ZLIB_SIZE_OFFSET sizeof(ZLIB_TYPE)
#define TRUE 1
#define FALSE 0
#define _32f_ 1000521
#define _64d_ 1000523
#define _ZSTD_compression_ 4700001
extern int verbose;
typedef struct {
   int verbose;
   int threads;
   int extract_only;
   int describe_only;
   const char* mz_lossy;
   const char* int_lossy;
   long blocksize;
   char* input_file;
   char* output_file;
   float mz_scale_factor;
   float int_scale_factor;
   long* indices;
   long indices_length;
   uint32_t* scans;
   long scans_length;
   long ms_level;

   int target_xml_format;
   int target_mz_format;
   int target_inten_format;

   int zstd_compression_level;

   int json_output;

   int topn;
} Arguments;
typedef struct {
   uint64_t* start_positions;
   uint64_t* end_positions;
   int total_spec;
   size_t file_end;  // TODO: remove this
} data_positions_t;
typedef struct {
   data_positions_t* spectra;
   data_positions_t* xml;
   data_positions_t* mz;
   data_positions_t* inten;

   uint64_t size;

   uint32_t* scans;
   uint16_t* ms_levels;
   float* ret_times;

} division_t;
typedef struct {
   division_t** divisions;
   int n_divisions;

} divisions_t;
typedef struct {
   char* mem;
   size_t size;
   size_t max_size;
} data_block_t;
typedef struct block_len_t {
   size_t original_size;
   size_t compressed_size;
   struct block_len_t* next;

   char* cache;  // During msz extraction, store decompressed block here as a
                 // "cache".

   char* encoded_cache;
   uint32_t encoded_cache_fmt;
   uint64_t encoded_cache_len;
   size_t* encoded_cache_lens;

   // Per-spectrum raw payload lengths within `cache`, as parsed from the
   // ZLIB_SIZE_OFFSET-byte headers (lens[i]=0 for empty spectra that were
   // skipped during compression). Populated lazily by the Python no-encode
   // fast path (extract.c:extract_no_encode_from_cache) so subsequent
   // accesses skip the cache walk. Distinct from `encoded_cache_lens`, which
   // holds RE-encoded sizes from the slow path's `encode_binary_block`.
   size_t* cache_spec_lens;

   // Shared-LRU bookkeeping. Membership and ordering are maintained by
   // lru_touch_block(); these fields are unused when the block is not in any
   // LRU. A block belongs to at most one block_lru_t at a time. See
   // `block_lru_t` below.
   struct block_len_t* lru_prev;
   struct block_len_t* lru_next;
   int lru_pinned;  // 1 if currently in an LRU's list, 0 otherwise.

} block_len_t;
typedef struct {
   block_len_t* head;
   block_len_t* tail;

   int populated;
} block_len_queue_t;
/**
 * @brief Process-wide shared, byte-budgeted LRU of decompressed block caches.
 *
 * Caps the cumulative memory held in `block_len_t->cache` (and the associated
 * encoded_cache / *_lens buffers) across ALL block queues that touch it —
 * typically every open MSZFile's xml/mz/intensity queues share one instance,
 * so aggregate decompressed-cache memory obeys a single ceiling regardless of
 * how many files are open. Eviction frees the cache buffers on the evicted
 * block but never frees the `block_len_t` node itself (owned by its queue).
 *
 * Budget is in BYTES (`blk->original_size` per cached block), not block count,
 * so it behaves correctly across files with very different block sizes.
 *
 * `lock` is an opaque pointer to a platform mutex (allocated in queue.c) so the
 * heavy platform headers stay out of this widely-included header. All public
 * operations take the lock; pass NULL for `lru` to disable caching bounds.
 */
typedef struct {
   block_len_t* head;   // Most-recently-touched block.
   block_len_t* tail;   // Least-recently-touched block (eviction victim).
   size_t cur_bytes;    // Sum of original_size over currently-cached blocks.
   size_t cap_bytes;    // Maximum cur_bytes before eviction. 0 = unbounded.
   void* lock;          // Opaque platform mutex (see queue.c).
} block_lru_t;
typedef struct {
   uint64_t xml_pos;  // msz file position of start of compressed XML data.
   uint64_t mz_binary_pos;     // msz file position of start of compressed m/z
                               // binary data.
   uint64_t inten_binary_pos;  // msz file position of start of compressed int
                               // binary data.
   uint64_t xml_blk_pos;
   uint64_t mz_binary_blk_pos;
   uint64_t inten_binary_blk_pos;
   uint64_t divisions_t_pos;
   size_t num_spectra;
   uint64_t original_filesize;
   int n_divisions;
   int magic_tag;
   int mz_fmt;
   int inten_fmt;
} footer_t;
typedef void (*Algo)(void*);
typedef Algo (*Algo_ptr)();
typedef void (*decode_fun)(z_stream*, char*, size_t, char**, size_t*,
                           data_block_t*);
typedef decode_fun (*decode_fun_ptr)();
typedef void (*encode_fun)(z_stream*, char**, size_t, char*, size_t*);
typedef encode_fun (*encode_fun_ptr)();
/**
 * @brief Compression function type.
 * This function takes a `ZSTD_CCtx` pointer, input data, input size,
 * output size pointer, and compression level, and returns a pointer to the
 * compressed data.
 * @param czstd A pointer to a `ZSTD_CCtx` struct for compression.
 * @param src A pointer to the input data to be compressed.
 * @param src_size The size of the input data.
 * @param dest_len A pointer to a `size_t` where the size of the compressed data
 * will be stored.
 * @param compression_level The compression level to use.
 * @return A pointer to the compressed data. Returns NULL on error.
 */
typedef void* (*compression_fun)(ZSTD_CCtx*, void*, size_t, size_t*, int);
typedef compression_fun (*compression_fun_ptr)();
/**
 * @brief Decompression function type.
 * This function takes a `ZSTD_DCtx` pointer, input data, input size,
 * output size pointer, and returns a pointer to the decompressed data.
 * @param dctx A pointer to a `ZSTD_DCtx` struct for decompression.
 * @param src A pointer to the input data to be decompressed.
 * @param src_size The size of the input data.
 * @param dest_len A pointer to a `size_t` where the size of the decompressed
 * data will be stored.
 * @return A pointer to the decompressed data. Returns NULL on error.
 */
typedef void* (*decompression_fun)(ZSTD_DCtx*, void*, size_t, size_t);
typedef decompression_fun (*decompression_fun_ptr)();
typedef struct {
   /* source information (source mzML) */
   uint32_t source_mz_fmt;
   uint32_t source_inten_fmt;
   uint32_t source_compression;
   uint32_t source_total_spec;

   /* target information (target msz)*/
   uint32_t target_xml_format;
   uint32_t target_mz_format;
   uint32_t target_inten_format;

   /* algo parameters */
   float mz_scale_factor;
   float int_scale_factor;

   /* runtime variables, not written to disk. */
   int populated;
   decode_fun decode_source_compression_mz_fun;
   decode_fun decode_source_compression_inten_fun;
   encode_fun encode_source_compression_mz_fun;
   encode_fun encode_source_compression_inten_fun;
   Algo target_xml_fun;
   Algo target_mz_fun;
   Algo target_inten_fun;
   compression_fun xml_compression_fun;
   compression_fun mz_compression_fun;
   compression_fun inten_compression_fun;
   decompression_fun xml_decompression_fun;
   decompression_fun mz_decompression_fun;
   decompression_fun inten_decompression_fun;

   int zstd_compression_level;  // no need to write to file since ZSTD_DCtx
                                // doesn't need it.

   int topn;  // runtime only, not serialized
} data_format_t;
int set_compress_runtime_variables(Arguments* args, data_format_t* df);
int set_decompress_runtime_variables(data_format_t* df, footer_t* msz_footer);
/* file.c */

void* get_mapping(int fd);
int walk_tar_entries(int fd,
                     int (*cb)(const char* name, int64_t data_offset,
                               size_t data_size, void* user),
                     void* user);
int remove_mapping(void* addr, size_t length);
int flush(int fd);
size_t get_filesize(char* path);
data_format_t* get_header_df(void* input_map);
footer_t* read_footer(void* input_map, long filesize);
int determine_filetype(void* input_map, size_t input_length);
int open_input_file(char* input_path);
int open_output_file(char* path);
int close_file(int fd);
/* mem.c */

data_block_t* alloc_data_block(size_t max_size);
int dealloc_data_block(data_block_t* db);
data_format_t* pattern_detect(char* input_map);
divisions_t* read_divisions(void* input_map, long position, int n_divisions);
division_t* flatten_divisions(divisions_t* divisions);
divisions_t* create_divisions(division_t* div, long n_divisions);
long determine_n_divisions(long filesize, long blocksize);
long get_division_size_max(divisions_t* divisions);
division_t* scan_mzml(char* input_map, data_format_t* df, long end, int flags);
/* sys.c */

int get_num_threads();
int warning(const char* format, ...);
/* Callback types for error/warning handling */
typedef void (*error_callback_t)(const char* message);
typedef void (*warning_callback_t)(const char* message);
/* Set custom error/warning callbacks (for Python bindings) */
void set_error_callback(error_callback_t callback);
void set_warning_callback(warning_callback_t callback);
void reset_error_callback(void);
void reset_warning_callback(void);
char* extract_spectrum_mz(char* input_map, ZSTD_DCtx* dctx, data_format_t* df,
                          block_len_queue_t* mz_binary_block_lens,
                          long mz_binary_blk_pos, divisions_t* divisions,
                          long index, size_t* out_len, int encode,
                          block_lru_t* lru);
char* extract_spectrum_inten(char* input_map, ZSTD_DCtx* dctx,
                             data_format_t* df,
                             block_len_queue_t* inten_binary_block_lens,
                             long inten_binary_blk_pos, divisions_t* divisions,
                             long index, size_t* out_len, int encode,
                             block_lru_t* lru);
char* extract_spectra(char* input_map, ZSTD_DCtx* dctx, data_format_t* df,
                      block_len_queue_t* xml_block_lens,
                      block_len_queue_t* mz_binary_block_lens,
                      block_len_queue_t* inten_binary_block_lens, long xml_pos,
                      long mz_pos, long inten_pos, int mz_fmt, int inten_fmt,
                      divisions_t* divisions, long index, size_t* out_len,
                      block_lru_t* lru);
ZSTD_CCtx* alloc_cctx();
int compress_mzml(char* input_map, size_t input_filesize, Arguments* arguments,
                  data_format_t* df, divisions_t* divisions, int output_fd);
ZSTD_DCtx* alloc_dctx();
int decompress_msz(char* input_map, size_t input_filesize, Arguments* args,
                   int fd);
block_len_queue_t* read_block_len_queue(void* input_map, long offset, long end);
z_stream* alloc_z_stream();